Bug 134521 - Impress crashes after select object from the the navigator
Summary: Impress crashes after select object from the the navigator
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.0.2
Keywords: haveBacktrace, needUITest
Depends on:
Blocks:
 
Reported: 2020-07-05 09:34 UTC by Mark Hung
Modified: 2020-07-08 14:46 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Documet that cause Impress crashing (23.26 KB, application/vnd.oasis.opendocument.presentation)
2020-07-05 09:35 UTC, Mark Hung
Details
bt with debug symbols (7.26 KB, text/plain)
2020-07-05 18:57 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hung 2020-07-05 09:34:14 UTC
Description:
Impress crashes after select object from the the navigator.

Steps to Reproduce:
1. Open the attached file.
2. Open Navigator window (ctrl+shit+f5).
3. Select the formula object "SomeFormula".
4. Click on the slide.

Actual Results:
Impress crashes.

Expected Results:
The Math formula object should be selected.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: cca2f5c6edffda7775288943bc6b16f86a9a6c0c
CPU 執行緒:8; OS:Windows 10.0 Build 18363; UI 算繪:Skia/Raster; VCL: win
Locale: zh-TW (zh_TW); UI: zh-TW
Calc: threaded
Comment 1 Mark Hung 2020-07-05 09:35:04 UTC
Created attachment 162654 [details]
Documet that cause Impress crashing
Comment 2 Julien Nabet 2020-07-05 18:57:13 UTC
Created attachment 162668 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this with gen and kf5 renderings but not with gtk3 rendering.
Comment 3 Julien Nabet 2020-07-05 18:58:56 UTC
Here are some additional console logs I get before the crash:
warn:legacy.tools:142145:142145:vcl/source/treelist/treelistbox.cxx:2194: Select: Null-Ptr
warn:legacy.tools:142145:142145:vcl/source/treelist/treelist.cxx:898: Select:View/Entry?
warn:legacy.tools:142145:142145:vcl/source/treelist/treelist.cxx:1387: Entry not in model or wrong view
Comment 4 Julien Nabet 2020-07-05 20:17:28 UTC
Caolán: thought you might be interested in this one since it concerns treelist/treelistbox
Comment 5 Commit Notification 2020-07-06 18:28:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f87a5e224d295505c61fa4fd35aef76d7af09bb5

tdf#134521 hierarchical search needed, not just toplevel entries

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2020-07-06 19:36:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/9de22c253f5286b6f6942f13bb8d1fdd15dcecc3

tdf#134521 hierarchical search needed, not just toplevel entries

It will be available in 7.0.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2020-07-08 14:46:51 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: 0695b5f5b328a1bc9cfdc8ba020dbdd674185e04
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!