tdf#134521 hierarchical search needed, not just toplevel entries

Change-Id: If5c9a69549e683eb4af619b1f27a22833c36e34d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/98213
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>